Added checkout component

--- a/zapping-prueba/src/styles/app.scss
+++ b/zapping-prueba/src/styles/app.scss
@@ -3,4 +3,10 @@
 $bgColor: #121416;
 $pink: #EF426F;
 $yellow: #F0F179;
+$gray: #373D43;
+$dark-gray: #FFFFFF0D;
+$light-gray: #FFFFFF99;
+$dark: #00000033;
+$white: #FFFFFF;
+$purple: #853FEF;
 $font-family-poppins: 'Poppins', sans-serif;
